# ev_car

./: .env.example  .gitignore  README.md  pyproject.toml  scaper_otodien.py
configs/: local_llm_config.yaml
data/: data xe dien bonbanh.com.csv  data_xe_vinfast.csv
data/interim/: ev_cleaned_rule_based.csv  ev_eda_ready.csv  ev_extracted_gpt5nano.csv  ev_extracted_qwen2.5_3b.csv  ev_specs_lookup.csv  merged_raw_listings.csv
data/interim/checkpoints/: ev_phase1_cleaned.csv
data/processed/: X_test.csv  X_test_scaled.csv  X_train.csv  X_train_scaled.csv  feature_dictionary.json  feature_names.csv  merged_raw_listings.csv  sample_weights_train.csv  scaler.joblib  y_test.csv  y_test_log.csv  y_train.csv  y_train_log.csv
data/raw/: BONBANH_XE_DIEN_FULL_DATA_CHUAN.csv  VFL_Final.csv  bonbanh.csv  data xe dien bonbanh.com.csv  data_xe_dien.csv  data_xe_dien_web_otodien.csv  xevinfastluot_full.csv
docs/research/: bare_jrnl_new_sample4.tex  presentation.tex
docs/scraping/: bonbanh.md  chotot.md  otodien.md
notebooks/: eda.ipynb  feature_engineering.ipynb  llm_test.ipynb  prep_eda.ipynb  project_report.ipynb  raw_features.ipynb
reports/model_benchmark/: benchmark_summary.csv  linear_regression_metrics.csv  random_forest_metrics.csv  svr_metrics.csv  xgboost_metrics.csv
scripts/: VFluotScraper.py  bonbanh, (3).md  harmonize_datasets.py  llm_batch_extraction.py  llm_extraction_local.py  locxexang.py  preprocess_rule_based.py
scripts/chotot/chotot/: items.py  middlewares.py  settings.py
scripts/linear_model/: mode_linear.ipynb
scripts/otodien/: scaper_otodien.py
src/features/: build_features.py  ev_specs.py  target_encoder.py
src/models/: __init__.py  base_model.py  benchmark.py  config.py  data_loader.py  evaluation.py  linear_regression.py  plotting.py  random_forest.py  run_all.py  svr.py  xgboost_model.py
src/viz/: style.py
(+3 files in other folders)
