[project]
name = "ev-car"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.66.0",
    "loguru>=0.7.3",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "ollama>=0.6.1",
    "openai>=2.26.0",
    "pandas>=3.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "scrapy>=2.14.1",
    "selenium>=4.41.0",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.5.5",
]
